FU-102 - Fixed tank and collection title spacing on tag list grid page

--- a/static/css/apps/tag.less
+++ b/static/css/apps/tag.less
@@ -57,7 +57,8 @@
         white-space: nowrap;
     }
 }
-.tlg-alias-list {
+
+.tli-info {
     padding: 10px;
 }
 
@@ -78,8 +79,8 @@
     padding: 10px;
 }
 .tag-info-heading {
-    font-size: 24px;
-    font-weight: @font-weight-base;
+    font-size: 15px;
+    line-height: 24px;
     margin-bottom: 0;
 }
 .tag-info-alias-list {
